# yandere-pic-bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  yandre-pic-bot.cabal
app/: BotDb.hs  Logger.hs  Main.hs  SendPic.hs  Types.hs  Yandere.hs
